Fix overflow hidden; add slide show pics

--- a/app/assets/stylesheets/override.css.scss
+++ b/app/assets/stylesheets/override.css.scss
@@ -1,5 +1,9 @@
 @import 'bootstrap';
 
+html, body {
+	overflow: auto;
+}
+
 body {
 	padding-top: 20px;
 	padding-bottom: 40px;
